<resources>
    <string name="app_name">ConstraintLayoutExamples</string>
    <string name="parent_position_activity">ParentPositionActivity</string>
    <string name="order_position_activity">OrderPositionActivity</string>
    <string name="alignment_activity">AlignmentActivity</string>
    <string name="message_item_activity">MessageItemActivity</string>
    <string name="baseline_alignment_activity">BaselineAlignmentActivity</string>
    <string name="weight_activity">WeightActivity</string>
    <string name="guideline_activity">GuidelineActivity</string>
    <string name="barrier_activity">BarrierActivity</string>
    <string name="bias_constraint_activity">BiasConstraintActivity</string>
    <string name="adjust_view_size_activity">AdjustViewSizeActivity</string>
    <string name="matchconstraint_vs_matchparent_activity_1">MatchConstraintVsMatchParentActivity1</string>
    <string name="matchconstraint_vs_matchparent_activity_2">MatchConstraintVsMatchParentActivity2</string>
    <string name="chain_activity">ChainActivity</string>
    <string name="keyframe_animations_activity">KeyframeAnimationsActivity</string>
    <string name="circlular_positioning_activity">CirclularPositioningActivity(1.1)</string>
    <string name="constrained_width_height_activity">ConstrainedWidthHeightActivity</string>
    <string name="gone_margin_activity">GoneMarginActivity</string>
    <string name="percent_activity">PercentActivity</string>
    <string name="group_activity">GroupActivity</string>
    <string name="layer_activity">LayerActivity</string>
    <string name="circular_reveal_activity">CircularRevealActivity</string>
    <string name="placeholder_activity">PlaceholderActivity</string>
    <string name="constraint_set_1_activity">ConstraintSet1Activity</string>
    <string name="constraint_set_2_activity">ConstraintSet2Activity</string>
    <string name="linear_constraint_activity">LinearConstraintActivity</string>
    <string name="flow_activity">FlowActivity</string>
    <string name="object_animator_activity">ObjectAnimatorActivity</string>
    <string name="activity_object_animator_vs_transition">ObjectAnimatorVsTransitionActivity</string>
    <string name="activity_transition_manager_go">TransitionManagerGoActivity</string>
    <string name="activity_transition_manager_constraint_set">TransitionManagerConstraintSetActivity</string>
    <string name="activity_motion_layout">MotionLayoutActivity</string>
    <string name="activity_motion_layout_2">MotionLayout2Activity</string>
    <string name="activity_motion_layout_3">MotionLayout3Activity</string>
    <string name="activity_motion_layout_feature_1">MotionLayoutFeature1Activity</string>
    <string name="activity_motion_layout_feature_2">MotionLayoutFeature2Activity</string>
    <string name="activity_motion_layout_feature_3">MotionLayoutFeature3Activity</string>
    <string name="film_title">黑客帝国 The Matrix (1999)
        \n类型: 动作 / 科幻
        \n语言: 英语
        \n上映日期: 1999-03-31(美国)
        \n片长: 136分钟</string>
    <string name="file_description_title">电影简介</string>

    <string name="film_description">不久的将来，网络黑客尼奥（基奴李维斯 饰）对这个看似正常的现实世界产生了怀疑。他结识了黑客崔妮蒂（凯莉·安·摩丝 饰），并见到了黑客组织的首领墨菲斯（劳伦斯·菲什伯恩 饰）。墨菲斯告诉他，现实世界其实是由一个名叫“母体”的计算机人工智能系统控制，人们就像他们饲养的动物，没有自由和思想，而尼奥就是能够拯救人类的救世主。
　　\n可是，救赎之路从来都不会一帆风顺，到底哪里才是真实的世界？如何才能打败那些超人一样的特勤？尼奥是不是人类的希望？这是黑客的帝国，程序和代码欢迎大家的到来。</string>
</resources>
